[B]Version 1.1.152[/B]
- hdporn92 - fix listing, playback